--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Quackenbush-Tyler-125x168.jpg" alt="local visual designer tyler profile image"></td>
+      <td><img src="https://ung.edu/university-relations/_uploads/images/profile/Quackenbush-Tyler-125x168.jpg" alt="local visual designer tyler profile image"></td>
       <td>
         <h1> Tyler Quackenbush</h1>
         <p><strong>Web Designer <em>(UX/UI Expert)</em>| Graphic Designer| Photographer</strong></p>
